[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/CharacterSheetSubpages/Inventory/InventoryEntry.gd" type="Script" id=1]

[node name="InventoryEntry" type="Control" groups=["InventoryEntry"]]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 738.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="HBoxContainer"]
margin_right = 24.0
margin_bottom = 40.0
rect_min_size = Vector2( 24, 40 )
align = 1

[node name="ItemName" type="LineEdit" parent="HBoxContainer"]
margin_left = 28.0
margin_right = 428.0
margin_bottom = 40.0
rect_min_size = Vector2( 400, 40 )
size_flags_horizontal = 3
size_flags_vertical = 2
placeholder_text = "Item Name"
caret_blink = true
caret_blink_speed = 0.5

[node name="ValuePerUnit" type="LineEdit" parent="HBoxContainer"]
margin_left = 432.0
margin_right = 512.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 40 )
size_flags_vertical = 0
align = 2
placeholder_text = "value/unit"
caret_blink = true
caret_blink_speed = 0.5

[node name="Denomination" type="OptionButton" parent="HBoxContainer"]
margin_left = 516.0
margin_right = 566.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
size_flags_vertical = 0
text = "cp"
align = 1
items = [ "cp", null, false, 0, null, "sp", null, false, 1, null, "ep", null, false, 2, null, "gp", null, false, 3, null, "pp", null, false, 4, null ]
selected = 0

[node name="WeightPerUnit" type="LineEdit" parent="HBoxContainer"]
margin_left = 570.0
margin_right = 650.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 40 )
size_flags_vertical = 0
align = 2
placeholder_text = "lbs/unit"
caret_blink = true
caret_blink_speed = 0.5

[node name="Quantity" type="LineEdit" parent="HBoxContainer"]
margin_left = 654.0
margin_right = 734.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 40 )
size_flags_vertical = 0
align = 2
placeholder_text = "Quantity"
caret_blink = true
caret_blink_speed = 0.5

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 738.0
margin_right = 778.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )

[node name="InfoRequest" type="Button" parent="HBoxContainer"]
margin_left = 782.0
margin_right = 819.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
hint_tooltip = "Green: Has custom info
Red: Has no custom info. Feel free to add some!"
size_flags_vertical = 0
text = "Info"

[node name="Equip" type="CheckButton" parent="HBoxContainer"]
margin_left = 823.0
margin_right = 938.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 24 )
size_flags_vertical = 0
text = "Equip"

[node name="InfoContainer" type="TextEdit" parent="."]
visible = false
margin_left = 807.0
margin_right = 807.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 40 )

[node name="SelectedFilter" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -980.0
margin_bottom = -1040.0
rect_min_size = Vector2( 940, 40 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 0
color = Color( 1, 1, 1, 0.0980392 )

[connection signal="toggled" from="HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="text_changed" from="HBoxContainer/ItemName" to="." method="_on_ItemName_text_changed"]
[connection signal="text_changed" from="HBoxContainer/ValuePerUnit" to="." method="_on_ValuePerUnit_text_changed"]
[connection signal="item_selected" from="HBoxContainer/Denomination" to="." method="_on_Denomination_item_selected"]
[connection signal="text_changed" from="HBoxContainer/WeightPerUnit" to="." method="_on_WeightPerUnit_text_changed"]
[connection signal="text_changed" from="HBoxContainer/Quantity" to="." method="_on_Quantity_text_changed"]
[connection signal="button_up" from="HBoxContainer/InfoRequest" to="." method="_on_InfoRequest_button_up"]
[connection signal="toggled" from="HBoxContainer/Equip" to="." method="_on_Equip_toggled"]
